Added more to "Main Accesses"

--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -6,6 +6,8 @@
  
 > Main accesses to the database.
  
+
+
 <table>
 <tr>
 <th>SQL101</th>
@@ -17,15 +19,96 @@
 </tr>
 <tr>
 <td colspan='2'>
-
-```SQL
---TODO--
+ 
+ ```SQL
+insert into usertable (username, password, email, premium, banned, name, gender, address, institution, description, birthDate, idCountry) values ($username, $password, $email, FALSE, FALSE, $name, $gender, $address, $institution, $description, $birthDate, $idCountry)
 ```
 </td>
 </tr>
 </table>
-                                    |
+
+<table>
+<tr>
+<th>SQL102</th>
+<td>Creates a new project in the platform</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+insert into project (creationDate, name, description, private) values ($creationDate, $name, $description, false);
+```
+</td>
+</tr>
+</table>
  
+<table>
+<tr>
+<th>SQL103</th>
+<td>Get project members</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+ 
+ ```SQL
+select * from usertable, project where deadline > CURRENT_DATE and idProject = $idProject
+order by deadline asc;
+```
+ </td>
+</tr>
+</table>
+
+<table>
+<tr>
+<th>SQL104</th>
+<td>Get project tasks</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+ 
+```SQL
+select name, deadline from task where deadline > CURRENT_DATE and idProject = $idProject
+order by deadline asc;
+```
+</td>
+</tr>
+</table>
+
+<table>
+<tr>
+<th>SQL105</th>
+<td>Get project forum posts</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+ 
+ ```SQL
+select * from forumpost where idProject = $idProject
+order by lastEditDate asc;
+```
+ </td>
+</tr>
+</table>
+
+
+
+...
 ## 2. Transactions
 
 > Transactions needed to assure the integrity of the data.
@@ -33,26 +116,28 @@
 <table>
 <tr>
 <th>T01</th>
-<td>--TODO--</td>
+<td>**TODO**</td>
 </tr>
 <tr>
 <th>Isolation Level</th>
-<td>--TODO--</td>
+<td>**TODO**</td>
 </tr>
 <tr>
 <th>Justification</th>
-<td>--TODO--</td>
-</tr>
-<tr>
-<td colspan='2'>
-
-```SQL
---TODO--
-```
-</td>
+<td>**TODO**</td>
 </tr>
 </table>
-
+```SQL
+**TODO**
+```
+ 
+| SQL Reference   | Transaction Name                    |
+| --------------- | ----------------------------------- |
+| Justification   | Justification for the transaction.  |
+| Isolation level | Isolation level of the transaction. |
+| `Complete SQL Code`                                   |
+ 
+...
  
 
 ## Revision history
