--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -21,7 +21,10 @@
 <td colspan='2'>
  
  ```SQL
-insert into usertable (username, password, email, premium, banned, name, gender, address, institution, description, birthDate, idCountry) values ($username, $password, $email, FALSE, FALSE, $name, $gender, $address, $institution, $description, $birthDate, $idCountry)
+insert into usertable (username, password, email, premium, banned, 
+name, gender, address, institution, description, birthDate, idCountry) values 
+($username, $password, $email, FALSE, FALSE, $name, $gender, $address, 
+$institution, $description, $birthDate, $idCountry)
 ```
 </td>
 </tr>
@@ -40,7 +43,8 @@ insert into usertable (username, password, email, premium, banned, name, gender,
 <td colspan='2'>
 
 ```SQL
-insert into project (creationDate, name, description, private) values ($creationDate, $name, $description, false);
+insert into project (creationDate, name, description, private) 
+values ($creationDate, $name, $description, false);
 ```
 </td>
 </tr>
@@ -59,7 +63,8 @@ insert into project (creationDate, name, description, private) values ($creation
 <td colspan='2'>
  
  ```SQL
-select * from usertable, project where deadline > CURRENT_DATE and idProject = $idProject
+select * from usertable, project where deadline > CURRENT_DATE 
+and idProject = $idProject
 order by deadline asc;
 ```
  </td>
@@ -79,7 +84,8 @@ order by deadline asc;
 <td colspan='2'>
  
 ```SQL
-select name, deadline from task where deadline > CURRENT_DATE and idProject = $idProject
+select name, deadline from task where 
+deadline > CURRENT_DATE and idProject = $idProject
 order by deadline asc;
 ```
 </td>
