--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -410,16 +410,15 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-
 ### 3.3 Module M03: Projects and Project Settings
 
 #### Endpoints of Module Projects and Project Settings
 
-- R301: View Project Tasks ```/dashboard/my_projects/{idProject}/tasks```
+- R301: View Project Tasks ```/project/{idProject}/tasks```
 
-- R302: View Project Forum ```/dashboard/my_projects/{idProject}/forum```
+- R302: View Project Forum ```/project/{idProject}/forum```
 
-- R303: View Project Options ```/dashboard/my_projects/{idProject}/options```
+- R303: View Project Options ```/project/{idProject}/options```
 
 - R304: Create Project Form ```/dashboard/new_project```
 
@@ -429,23 +428,23 @@ The architecture of our **Project Management** web application to develop is doc
 
 - R307: Delete Project Members ```/dashboard/my_projects/{idProject}/manage_members```
 
-- R308: Edit Project Members Form ```/dashboard/my_projects/{idProject}/manage_members```
+- R308: Edit Project Members Form ```/project/{idProject}/manage_members```
 
-- R309: Edit Project Members Action ```/dashboard_my_projects/{idProject}/manage_members```
+- R309: Edit Project Members Action ```/project/{idProject}/manage_members```
 
-- R310: Create Project Task Form ```/dashboard/my_projects/{idProject}/create_task```
+- R310: Create Project Task Form ```/project/{idProject}/create_task```
 
-- R311: Create Project Task Action ```/dashboard/my_projects/{idProject}/create_task```
+- R311: Create Project Task Action ```/project/{idProject}/create_task```
 
-- R312: Delete Project Task ```/dashboard/my_projects/{idProject}/manage_tasks```
+- R312: Delete Project Task ```/project/{idProject}/manage_tasks```
 
-- R313: Edit Project Task Form ```/dashboard/my_projects/{idProject}/manage_tasks```
+- R313: Edit Project Task Form ```/project/{idProject}/manage_tasks```
 
-- R314: Edit Project Task Action ```/dashboard/my_projects/{idProject}/manage_tasks```
+- R314: Edit Project Task Action ```/project/{idProject}/manage_tasks```
 
-- R315: Edit Project Action ```/dashboard/my_projects/{idProject}/options```
+- R315: Edit Project Action ```/project/{idProject}/options```
 
-- R316: View Project Task ```/dashboard/my_projects/{idProject}/task/{idTask}```
+- R316: View Project Task ```/[project/{idProject}/task/{idTask}```
 
 - R317: Create Project Task Comment ```/dashboard/my_projects/{idProject}/task/{idTask}```
 
@@ -1047,12 +1046,12 @@ The architecture of our **Project Management** web application to develop is doc
 
 #### Endpoints of Module Search Engine
 
-- R401: Search Projects Action ```/search_projects```
-- R402: Search Projects API ```/api/search_projects```
-- R403: Search Users Action ```/search_users```
-- R404: Search Users API ```/api/search_users```
-- R405: Search Tasks Action ```/search_tasks```
-- R406: Search Tasks API ```/api/search_tasks```
+- R401: Search Projects Action ```/search/projects```
+- R402: Search Projects API ```/search```
+- R403: Search Users Action ```/search/users```
+- R404: Search Users API ```/search```
+- R405: Search Tasks Action ```/search/asks```
+- R406: Search Tasks API ```/search```
 
 #### R401: Search Projects Action
 
