--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -6,11 +6,20 @@
 
 | Identifier | Name | Priority | Description |
 | :----------:|:--------------|:---------:|:------------|
+| US01 | Log in | high | As a Visitor, I want to authenticate into the system, so that I can access privileged information.  |
+| US02 | Register | high | As Visitor, I want to register myself into the system, so that I can authenticate myself into the system.  |
 | US04 | Home Page | high | As a User, I want to access the home page, so that I can see a brief website's description.  |
 | US05 | About page | low | As a User, I want to access about page, so that I can see the complete information about the website. |
 | US06 | FAQ page | medium | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
 | US07 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
+| US09 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute and what's the current state of the project.|
+| US10 | Search Users | high | As a User, I want to search through the other user's profiles, so that I can connect with another user.|
 | US11 | View profiles | high | As a User, I want to be able to visit a page with the user information, so that I can inform myself about others (e.g. Their location).|
+| US14 | Access Dashboard | high | As an Authenticated User, I want to be able to access my dashboard, so that I can inform myself on relevant recent activity.|
+| US15 | View my projects | high | As an Authenticated I want to have a page where i can see all my projects, so that I can better access them.|
+| US17 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
+| US21 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
+| US27 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
 
 <!-- TODO: User login / logout  and see dashboard only after login
 
@@ -25,21 +34,33 @@
 
 | Web Resource Reference | URL           |
 | :----------------------|:--------------|
+| [R101: Login Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-action) | [/login](http://lbaw1743.lbaw-prod.fe.up.pt/login)  |
+| [R102: Logout Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r102-logout-action) | [/logout](http://lbaw1743.lbaw-prod.fe.up.pt/logout)  |
+| [R103: Register Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action) | [/register](http://lbaw1743.lbaw-prod.fe.up.pt/register)  |
 | [R104: View Profile](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r104-view-profile)| [/profile/{id}](http://lbaw1743.lbaw-prod.fe.up.pt/profile/1) |
-<!-- TODO: 
-| [R101: Login Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-action) | /login |
-| [R102: Logout Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r102-logout-action) | /logout |
--->
 
 #### Module M02: Dashboard
-
-<!-- 
-TODO: Dashboard appears after user is logged in
--->
 
 | Web Resource Reference | URL           |
 | :----------------------|:--------------|
 | [R201: Dashboard Page](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-action) | [/dashboard](http://lbaw1743.lbaw-prod.fe.up.pt/dashboard) |
+| [R202: View Projects](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r202-view-projects) | [/dashboard/projects](http://lbaw1743.lbaw-prod.fe.up.pt/dashboard/projects) |
+| [R203: View Tasks](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r203-view-tasks) | [/dashboard/tasks](http://lbaw1743.lbaw-prod.fe.up.pt/dashboard/tasks) |
+
+#### Module M03: Projects and Project Settings
+
+| Web Resource Reference | URL           |
+| :----------------------|:--------------|
+| [R301: View Project Tasks](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-project-tasks) | [/project/{id}/tasks](http://lbaw1743.lbaw-prod.fe.up.pt/project/1/tasks)  |
+| [R302: View Project Forum](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r302-view-project-forum) | [/project/{id}/forum](http://lbaw1743.lbaw-prod.fe.up.pt/project/1/forum)  |
+| [R303: View Project Options](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options) | [/project/{id}/forum](http://lbaw1743.lbaw-prod.fe.up.pt/project/1/options)  |
+| [R306: View Project Members](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r306-view-project-members) | [/project/{id}/members](http://lbaw1743.lbaw-prod.fe.up.pt/project/1/members)  |
+| [R316: View Project Task](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r316-view-project-task) | [/project/{idproject}/task/{idtask}](http://lbaw1743.lbaw-prod.fe.up.pt/project/1/task/1)  |
+
+#### Module M04: Search Engine
+| Web Resource Reference | URL           |
+| :----------------------|:--------------|
+| [R401: Search Project Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-project-tasks) | [/project/{id}/tasks](http://lbaw1743.lbaw-prod.fe.up.pt/project/1/tasks)  |
 
 #### Module M06: Static Pages
 
