--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -1046,19 +1046,19 @@ The architecture of our **Project Management** web application to develop is doc
 
 #### Endpoints of Module Search Engine
 
-- R401: Search Projects Action ```/search/projects```
-- R402: Search Projects API ```/search```
-- R403: Search Users Action ```/search/users```
-- R404: Search Users API ```/search```
-- R405: Search Tasks Action ```/search/asks```
-- R406: Search Tasks API ```/search```
+- R401: Search Projects Action ```/search/{text}/projects```
+- R402: Search Projects API ```/search/{text}```
+- R403: Search Users Action ```/search/{text}/users```
+- R404: Search Users API ```/search/{text}```
+- R405: Search Tasks Action ```/search/{text}/tasks```
+- R406: Search Tasks API ```/search/{text}```
 
 #### R401: Search Projects Action
 
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/search_projects</td>
+    <td colspan="2">/search/{text}/projects</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -1092,7 +1092,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/api/search_projects</td>
+    <td colspan="2">/search/{text}</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -1122,7 +1122,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/search_users</td>
+    <td colspan="2">/search/{text}/users</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -1186,7 +1186,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/search_tasks</td>
+    <td colspan="2">/search/{text}/tasks </td>
   </tr>
   <tr>
     <th>Description</th>
@@ -1220,7 +1220,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/api/search_tasks</td>
+    <td colspan="2">/search/{text}</td>
   </tr>
   <tr>
     <th>Description</th>
