--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -12,6 +12,7 @@
 | US05 | About page | low | As a User, I want to access about page, so that I can see the complete information about the website. |
 | US06 | FAQ page | medium | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
 | US07 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
+| US08 | Search projects | high | As a User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
 | US09 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute and what's the current state of the project.|
 | US10 | Search Users | high | As a User, I want to search through the other user's profiles, so that I can connect with another user.|
 | US11 | View profiles | high | As a User, I want to be able to visit a page with the user information, so that I can inform myself about others (e.g. Their location).|
@@ -20,6 +21,7 @@
 | US17 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
 | US21 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
 | US27 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
+| US45 | Administration Page | high | As a Website Administrator, I want to be able to access a Administration Page, so that i can better access tools to moderate the website.|
 
 <!-- TODO: User login / logout  and see dashboard only after login
 
@@ -58,9 +60,23 @@
 | [R316: View Project Task](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r316-view-project-task) | [/project/{idproject}/task/{idtask}](http://lbaw1743.lbaw-prod.fe.up.pt/project/1/task/1)  |
 
 #### Module M04: Search Engine
+
 | Web Resource Reference | URL           |
 | :----------------------|:--------------|
-| [R401: Search Project Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-project-tasks) | [/project/{id}/tasks](http://lbaw1743.lbaw-prod.fe.up.pt/project/1/tasks)  |
+| [R401: Search Projects Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r401-search-projects-action) | /search/{text}/projects  |
+| [R402: Search Projecs Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r402-search-projects-api) | /search/{text} |
+| [R403: Search Users Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r403-search-users-action) [/search/{text}/users |
+| [R404: Search Users Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r404-search-users-api) [/search/{text} |
+| [R405: Search Tasks Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r405-search-tasks-action) [/search/{text}/tasks |
+| [R406: Search Tasks Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r406-search-tasks-api) [/search/{text} |
+
+#### Module M05: Administration
+
+| Web Resource Reference | URL           |
+| :----------------------|:--------------|
+| [R501: Admin Login Form](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r501-admin-login-form) | [/admin/](http://lbaw1743.lbaw-prod.fe.up.pt/admin)   |
+| [R503: View Projects](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r503-view-projects) | [/admin/projects](http://lbaw1743.lbaw-prod.fe.up.pt/admin/projects)   |
+| [R506: View Users](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r506-view-users) | [/admin/users](http://lbaw1743.lbaw-prod.fe.up.pt/admin/users)   |
 
 #### Module M06: Static Pages
 
