--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -23,13 +23,6 @@
 | US27 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
 | US45 | Administration Page | high | As a Website Administrator, I want to be able to access a Administration Page, so that i can better access tools to moderate the website.|
 
-<!-- TODO: User login / logout  and see dashboard only after login
-
-| US01 | Log in | high | As a Visitor, I want to authenticate into the system, so that I can access privileged information.  |
-| US14 | Access Dashboard | high | As an Authenticated User, I want to be able to access my dashboard, so that I can inform myself on relevant recent activity.|
-| US17 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
--->
-
 ### 1.2. Implemented Web Resources
 
 #### Module M01: Authentication and Individual Profile
@@ -65,10 +58,10 @@
 | :----------------------|:--------------|
 | [R401: Search Projects Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r401-search-projects-action) | /search/{text}/projects  |
 | [R402: Search Projecs Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r402-search-projects-api) | /search/{text} |
-| [R403: Search Users Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r403-search-users-action) [/search/{text}/users |
-| [R404: Search Users Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r404-search-users-api) [/search/{text} |
-| [R405: Search Tasks Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r405-search-tasks-action) [/search/{text}/tasks |
-| [R406: Search Tasks Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r406-search-tasks-api) [/search/{text} |
+| [R403: Search Users Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r403-search-users-action) /search/{text}/users |
+| [R404: Search Users Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r404-search-users-api) | /search/{text} |
+| [R405: Search Tasks Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r405-search-tasks-action) | /search/{text}/tasks |
+| [R406: Search Tasks Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r406-search-tasks-api) | /search/{text} |
 
 #### Module M05: Administration
 
@@ -106,9 +99,12 @@
 ## 2. Prototype
 
 The prototype is available at http://lbaw1743.lbaw-prod.fe.up.pt/
-  <!--
-Credentials: TODO: 
-username / password -->
+
+Credentials:
+* email:
+  ** pputman0@usnews.com
+* password:
+  ** PHreK9plUZ8
 
 The code is avalable at https://github.com/mpcmarques/lbaw1743/lbaw-laravel
 
