--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -58,7 +58,7 @@
 | :----------------------|:--------------|
 | [R401: Search Projects Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r401-search-projects-action) | /search/{text}/projects  |
 | [R402: Search Projecs Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r402-search-projects-api) | /search/{text} |
-| [R403: Search Users Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r403-search-users-action) /search/{text}/users |
+| [R403: Search Users Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r403-search-users-action) | /search/{text}/users |
 | [R404: Search Users Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r404-search-users-api) | /search/{text} |
 | [R405: Search Tasks Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r405-search-tasks-action) | /search/{text}/tasks |
 | [R406: Search Tasks Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r406-search-tasks-api) | /search/{text} |
@@ -101,10 +101,10 @@
 The prototype is available at http://lbaw1743.lbaw-prod.fe.up.pt/
 
 Credentials:
-* email:
-  ** pputman0@usnews.com
-* password:
-  ** PHreK9plUZ8
+
+* email: pputman0@usnews.com
+
+* password: PHreK9plUZ8
 
 The code is avalable at https://github.com/mpcmarques/lbaw1743/lbaw-laravel
 
