--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -3,6 +3,7 @@
 The architecture of our **Project Management** web application to develop is documented indicating the catalogue of resources and the properties of each resource, including: references to the graphical interfaces, and the format of JSON responses.
 
 ## 1. Overview
+
 <!-- > Identify and overview the modules that will be part of the application. -->
 
 <table>
@@ -33,6 +34,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 ## 2. Permissions
+
 <!-- > Define the permissions used by each module, necessary to access its data and features. -->
 
 <table>
@@ -79,6 +81,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 ## 3. Modules
+
 <!-- > Web resources organized by module
 > Document and describe the web resources associated with each module, indicating the URL, HTTP method, request parameters and response.
 > Follow the RESTful resource naming
@@ -262,7 +265,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/profile/edit/{id}</td>
+    <td colspan="2">/profile/{id}/edit/</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -333,7 +336,7 @@ The architecture of our **Project Management** web application to develop is doc
 #### Endpoints of Module Dashboard
 
 - R201: Dashboard Page```/dashboard```
-- R202: View Projects ```/dashboard/my_projects```
+- R202: View Projects ```/dashboard/projects```
 - R203: View Tasks ```/dashboard/tasks```
 
 #### R201: Dashboard Page
@@ -366,7 +369,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects</td>
+    <td colspan="2">/dashboard/projects</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -424,9 +427,9 @@ The architecture of our **Project Management** web application to develop is doc
 
 - R305: Create Project Action ```/dashboard/new_project```
 
-- R306: View Project Members ```/dashboard/my_projects/{idProject}/members```
+- R306: View Project Members ```/project/{idProject}/members```
 
-- R307: Delete Project Members ```/dashboard/my_projects/{idProject}/manage_members```
+- R307: Delete Project Members ```/project/{idProject}/manage_members```
 
 - R308: Edit Project Members Form ```/project/{idProject}/manage_members```
 
@@ -453,7 +456,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/tasks</td>
+    <td colspan="2">/project/{idProject}/tasks</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -483,7 +486,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/forum</td>
+    <td colspan="2">/project/{idProject}/forum</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -513,7 +516,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/options</td>
+    <td colspan="2">/project/{idProject}/options</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -614,7 +617,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/members</td>
+    <td colspan="2">/project/{idProject}/members</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -644,7 +647,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/manage_members</td>
+    <td colspan="2">/project/{idProject}/manage_members</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -675,7 +678,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/manage_members</td>
+    <td colspan="2">/project/{idProject}/manage_members</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -709,7 +712,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/manage_members</td>
+    <td colspan="2">/project/{idProject}/manage_members</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -751,7 +754,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/create_task</td>
+    <td colspan="2">/project/{idProject}/create_task</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -781,7 +784,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/create_task</td>
+    <td colspan="2">/project/{idProject}/create_task</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -824,7 +827,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/manage_tasks</td>
+    <td colspan="2">/project/{idProject}/manage_tasks</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -858,7 +861,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/manage_tasks</td>
+    <td colspan="2">/project/{idProject}/manage_tasks</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -892,7 +895,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/manage_tasks</td>
+    <td colspan="2">/project/{idProject}/manage_tasks</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -934,7 +937,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/options</td>
+    <td colspan="2">/project/{idProject}/options</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -975,7 +978,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/task/{idTask}</td>
+    <td colspan="2">/project/{idProject}/task/{idTask}</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -1010,7 +1013,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/task/{idTask}</td>
+    <td colspan="2">/project/{idProject}/task/{idTask}</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -1046,14 +1049,12 @@ The architecture of our **Project Management** web application to develop is doc
 
 #### Endpoints of Module Search Engine
 
-- R401: Search Projects Action ```/search/{text}/projects```
-- R402: Search Projects API ```/search/{text}```
-- R403: Search Users Action ```/search/{text}/users```
-- R404: Search Users API ```/search/{text}```
-- R405: Search Tasks Action ```/search/{text}/tasks```
-- R406: Search Tasks API ```/search/{text}```
+- R401: Show searched projects ```/search/{text}/projects```
+- R402: Show searched users ```/search/{text}/users```
+- R403: Show searched tasks ```/search/{text}/tasks```
+- R404: Search Action ```/search/{text}```
 
-#### R401: Search Projects Action
+#### R401: Show searched projects
 
 <table>
   <tr>
@@ -1087,37 +1088,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R402: Search Projects API
-
-<table>
-  <tr>
-    <th>URL</th>
-    <td colspan="2">/search/{text}</td>
-  </tr>
-  <tr>
-    <th>Description</th>
-    <td colspan="2">This web resource searches the system for projects and returns the results.</td>
-  </tr>
-  <tr>
-    <th>Method</th>
-    <td>GET</td>
-  </tr>
-  <tr>
-    <th>Parameters</th>
-    <td>?title: string</td>
-    <td>Project Name</td>
-  </tr>
-  <tr>
-    <th>Request Body</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#json401-search-projects-projects">JSON401</a></td>
-  </tr>
-  <tr>
-    <th>Permissions</th>
-    <td colspan="2">USR, VIS</td>
-  </tr>
-</table>
-
-#### R403: Search Users Action
+#### R402: Show searched users
 
 <table>
   <tr>
@@ -1151,37 +1122,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R404: Search Users API
-
-<table>
-  <tr>
-    <th>URL</th>
-    <td colspan="2">/api/search_users</td>
-  </tr>
-  <tr>
-    <th>Description</th>
-    <td colspan="2">This web resource searches the system for users and returns the results.</td>
-  </tr>
-  <tr>
-    <th>Method</th>
-    <td>GET</td>
-  </tr>
-  <tr>
-    <th>Parameters</th>
-    <td>?title: string</td>
-    <td>Project Name</td>
-  </tr>
-  <tr>
-    <th>Request Body</th>
-    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#json402-search-users-users">JSON402</a></td>
-  </tr>
-  <tr>
-    <th>Permissions</th>
-    <td colspan="2">USR, VIS</td>
-  </tr>
-</table>
-
-#### R405: Search Tasks Action
+#### R403: Show searched tasks
 
 <table>
   <tr>
@@ -1215,7 +1156,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
-#### R406: Search Tasks API
+#### R404: Search Action
 
 <table>
   <tr>
@@ -1224,7 +1165,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>Description</th>
-    <td colspan="2">This web resource searches the system for tasks and returns the results.</td>
+    <td colspan="2">This web resource searches the system for tasks, projects and users and returns the results.</td>
   </tr>
   <tr>
     <th>Method</th>
@@ -1259,6 +1200,7 @@ The architecture of our **Project Management** web application to develop is doc
 - R508: Remove User Action ```/admin/users/remove```
 
 #### R501: Admin Login Form
+
 <table>
   <tr>
     <th>URL</th>
@@ -1283,6 +1225,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R502: Admin Login Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -1343,6 +1286,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R504: Edit Project Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -1378,6 +1322,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R505: Remove Project Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -1413,6 +1358,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R506: View Users
+
 <table>
   <tr>
     <th>URL</th>
@@ -1433,6 +1379,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R507: Edit User Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -1468,6 +1415,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R508: Remove User Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -1512,6 +1460,7 @@ The architecture of our **Project Management** web application to develop is doc
 - R604: 404 Page```/404```
 
 #### R601: About Page
+
 <table>
   <tr>
     <th>URL</th>
@@ -1536,6 +1485,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R602: Contact Page
+
 <table>
   <tr>
     <th>URL</th>
@@ -1560,6 +1510,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R603: FAQ Page
+
 <table>
   <tr>
     <th>URL</th>
@@ -1584,6 +1535,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R604: 404
+
 <table>
   <tr>
     <th>URL</th>
@@ -1612,6 +1564,7 @@ The architecture of our **Project Management** web application to develop is doc
 > Document the JSON or XML responses that will be used by the web resources.
 
 #### JSON401: Search Projects: {projects}[]
+
 ```javascript
 {
   "projects": [
@@ -1629,6 +1582,7 @@ The architecture of our **Project Management** web application to develop is doc
 ```
 
 #### JSON402: Search Users: {users}[]
+
 ```javascript
 {
   "users": [
@@ -1647,6 +1601,7 @@ The architecture of our **Project Management** web application to develop is doc
 ```
 
 #### JSON403: Search Tasks: {tasks}[]
+
 ```javascript
 {
   "tasks": [
@@ -1662,6 +1617,7 @@ The architecture of our **Project Management** web application to develop is doc
   ]
 }
 ```
+
 <!-- ## Web resources descriptors <note important>Do not include on the final artefact</note>
 
   * URL - Resource identifier, following the RESTful resource naming conventions
@@ -1677,6 +1633,7 @@ The architecture of our **Project Management** web application to develop is doc
 
 ***
 ## Revision history
+
 Changes made to the first submission:
 1. Removed Modals.
 2. Fixed UI and Endpoints links.
