--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -390,6 +390,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R203: View Tasks
+
 <table>
   <tr>
     <th>URL</th>
@@ -447,7 +448,7 @@ The architecture of our **Project Management** web application to develop is doc
 
 - R315: Edit Project Action ```/project/{idProject}/options```
 
-- R316: View Project Task ```/[project/{idProject}/task/{idTask}```
+- R316: View Project Task ```/project/{idProject}/task/{idTask}```
 
 - R317: Create Project Task Comment ```/dashboard/my_projects/{idProject}/task/{idTask}```
 
