--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -56,12 +56,10 @@
 
 | Web Resource Reference | URL           |
 | :----------------------|:--------------|
-| [R401: Search Projects Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r401-search-projects-action) | /search/{text}/projects  |
-| [R402: Search Projecs Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r402-search-projects-api) | /search/{text} |
-| [R403: Search Users Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r403-search-users-action) | /search/{text}/users |
-| [R404: Search Users Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r404-search-users-api) | /search/{text} |
-| [R405: Search Tasks Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r405-search-tasks-action) | /search/{text}/tasks |
-| [R406: Search Tasks Api](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r406-search-tasks-api) | /search/{text} |
+| [R401: Show searched projects](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r401-show-searched-projects) | /search/{text}/projects  |
+| [R402: Show searched users](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r402-show-searched-users) | /search/{text}/users |
+| [R403: Show searched tasks](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r403-show-searched-tasks) | /search/{text}/tasks |
+| [R404: Search Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r404-search-action) | /search/{text} |
 
 #### Module M05: Administration
 
