--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -1,69 +1,63 @@
 # A9: Main accesses to the database and transactions
- 
+
 ## 1. Main Accesses
-
-#M01: Authentication and Individual Profile
- 
 > Main accesses to the database.
- 
-<table>
-<tr>
-<th>SQL101</th>
-<td>Creates a new user in the platform</td>
-</tr>
-<tr>
-<th>Web Resource</th>
-<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action">R103</a></td>
-</tr>
-<tr>
-<td colspan='2'>
 
-```SQL
---TODO--
-```
-</td>
-</tr>
+##### M01: Authentication and Individual Profile
+<table>
+    <tr>
+      <th>SQL101</th>
+      <td>Creates a new user in the platform</td>
+    </tr>
+    <tr>
+      <th>Web Resource</th>
+      <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action">R103</a></td>
+    </tr>
+    <tr>
+      <td colspan='2'>
+      ```SQL
+      --TODO--
+      ```
+      </td>
+    </tr>
 </table>
-                                    |
- 
+
 ## 2. Transactions
-
 > Transactions needed to assure the integrity of the data.
- 
-<table>
-<tr>
-<th>T01</th>
-<td>--TODO--</td>
-</tr>
-<tr>
-<th>Isolation Level</th>
-<td>--TODO--</td>
-</tr>
-<tr>
-<th>Justification</th>
-<td>--TODO--</td>
-</tr>
-<tr>
-<td colspan='2'>
 
-```SQL
---TODO--
-```
-</td>
-</tr>
+<table>
+  <tr>
+    <th>T01</th>
+    <td>--TODO--</td>
+  </tr>
+  <tr>
+    <th>Isolation Level</th>
+    <td>--TODO--</td>
+  </tr>
+  <tr>
+    <th>Justification</th>
+    <td>--TODO--</td>
+  </tr>
+  <tr>
+    <td colspan='2'>
+    ```SQL
+    --TODO--
+    ```
+    </td>
+  </tr>
 </table>
 
- 
-
+<!--
+***
 ## Revision history
 
-<!-- Changes made to the first submission:
+Changes made to the first submission:
 1. Item 1
 1. Item 2 -->
 
 ***
 
-GROUP1743, 16/04/2018
+GROUP1743, 23/04/2018
 
 > Mateus Pedroza Cortes Marques, up201601876@fe.up.pt
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
