--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -108,9 +108,11 @@ The code is avalable at https://github.com/mpcmarques/lbaw1743/lbaw-laravel
 
 ## Revision history
 
-<!-- Changes made to the first submission:
-1. Item 1
-1. Item 2 -->
+Changes made to the first submission:
+
+1. Added to the artifact more implemented User Stories.
+
+2. Added to the artifact more implemented web resources.
 
 ***
 
