--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -114,6 +114,8 @@ Changes made to the first submission:
 
 2. Added to the artifact more implemented web resources.
 
+3. Added credentials at the prototype section, so that the tester can log in with the displayed account to access areas of the webapp that need auth (ex: dashboad).
+
 ***
 
 GROUP1743, 16/04/2018
